...
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/black"
                tools:text="Posted on: 2023-05-01 15:45"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update"
                android:textSize="12sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:textSize="12sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

...
